--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
 
-/out/
+### IntelliJ IDEA ###
+out/
